force-app/main/default/objects/ConfiguracoesTelaCustomizada__c/ConfiguracoesTelaCustomizada__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Armazena configurações que tem impacto nas telas customizadas</description>
    <label>Configurações de tela customizada</label>
</CustomObject>