force-app/main/default/objects/ConfiguracoesTelaCustomizada__c/fields/DescontoMinimo__c.field-meta.xml
<CustomField>
    <fullName>DescontoMinimo__c</fullName>
    <description>Desconto mínimo a ser exibido na tela de listagem de aeronaves</description>
    <inlineHelpText>Desconto mínimo a ser exibido na tela de listagem de aeronaves</inlineHelpText>
    <label>Desconto Mínimo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>