force-app/main/default/objects/ConfiguracoesTelaCustomizada__c/fields/DiferencaPesoDisponivel__c.field-meta.xml
<CustomField>
    <fullName>DiferencaPesoDisponivel__c</fullName>
    <description>Diferença percentual de peso disponível para separar aeronaves de um mesmo modelo em um novo grupo a ser exibido na tela de solicitação de voo</description>
    <inlineHelpText>Diferença percentual de peso disponível para separar aeronaves de um mesmo modelo em um novo grupo a ser exibido na tela de solicitação de voo</inlineHelpText>
    <label>Diferença de Peso Disponível</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>