force-app/main/default/objects/ConfiguracoesTelaCustomizada__c/fields/NumeroRotasRecentes__c.field-meta.xml
<CustomField>
    <fullName>NumeroRotasRecentes__c</fullName>
    <description>Número de rotas recentes a serem exibidas no componente de rotas recentes</description>
    <inlineHelpText>Número de rotas recentes a serem exibidas no componente de rotas recentes</inlineHelpText>
    <label>Numero de Rotas Recentes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>